flux/bastille/apps/network/external-routes/routes/clef.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clef
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: clef.chancey.dev
spec:
  hostnames:
    - clef.chancey.dev
  parentRefs:
    - name: edge
      kind: Gateway
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: clef
          port: 8002
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  name: clef
  namespace: network
spec:
  ports:
    - name: http
      port: 8002
      targetPort: 8002
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: clef
  namespace: network
  labels:
    kubernetes.io/service-name: clef
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.0.193
    conditions:
      ready: true
ports:
  - name: http
    port: 8002
    protocol: TCP
