flux/bastille/apps/network/external-routes/routes/garage-s3.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: s3.chancey.dev
spec:
  hostnames:
    - s3.chancey.dev
  parentRefs:
    - name: edge
      kind: Gateway
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: garage-s3
          port: 30188
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  name: garage-s3
  namespace: network
spec:
  ports:
    - name: http
      port: 30188
      targetPort: 30188
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: garage-s3
  namespace: network
  labels:
    kubernetes.io/service-name: garage-s3
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.0.165
    conditions:
      ready: true
ports:
  - name: http
    port: 30188
    protocol: TCP
