flux/bastille/apps/network/external-routes/routes/intrepid.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: intrepid
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: intrepid.chancey.dev
spec:
  hostnames:
    - intrepid.chancey.dev
  parentRefs:
    - name: edge
      kind: Gateway
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: intrepid
          port: 443
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  name: intrepid
  namespace: network
spec:
  ports:
    - name: https
      appProtocol: kubernetes.io/wss
      port: 443
      targetPort: 443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: intrepid
  namespace: network
  labels:
    kubernetes.io/service-name: intrepid
addressType: IPv4
endpoints:
  - addresses:
      - 10.131.128.1
    conditions:
      ready: true
ports:
  - name: https
    port: 443
    protocol: TCP
