flux/bastille/apps/network/external-routes/routes/opnsense.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opnsense
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: opnsense.chancey.dev
spec:
  hostnames:
    - opnsense.chancey.dev
  parentRefs:
    - name: edge
      kind: Gateway
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: opnsense
          port: 443
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  name: opnsense
  namespace: network
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: opnsense
  namespace: network
  labels:
    kubernetes.io/service-name: opnsense
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.0.1
    conditions:
      ready: true
ports:
  - name: https
    port: 443
    protocol: TCP
