flux/bastille/apps/network/external-routes/routes/proxmox.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxmox
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: proxmox.chancey.dev
spec:
  hostnames:
    - proxmox.chancey.dev
  parentRefs:
    - name: edge
      kind: Gateway
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: proxmox
          port: 8006
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: network
spec:
  ports:
    - name: https
      port: 8006
      targetPort: 8006
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: proxmox
  namespace: network
  labels:
    kubernetes.io/service-name: proxmox
addressType: IPv4
endpoints:
  - addresses:
      - 10.131.128.23
    conditions:
      ready: true
ports:
  - name: https
    port: 8006
    protocol: TCP
