flux/bastille/apps/network/external-routes/routes/sw-03.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sw-03
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sw-03.chancey.dev
spec:
  hostnames:
    - sw-03.chancey.dev
  parentRefs:
    - name: internal
      kind: Gateway
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: sw-03
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  name: sw-03
  namespace: network
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: sw-03
  namespace: network
  labels:
    kubernetes.io/service-name: sw-03
addressType: IPv4
endpoints:
  - addresses:
      - 10.173.179.8
    conditions:
      ready: true
ports:
  - name: http
    port: 80
    protocol: TCP
