flux/bastille/apps/network/external-routes/routes/truenas.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truenas
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: truenas.chancey.dev
spec:
  hostnames:
    - truenas.chancey.dev
  parentRefs:
    - name: edge
      kind: Gateway
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: truenas
          port: 443
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: truenas-websocket
  namespace: network
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: truenas
  timeout:
    http:
      requestTimeout: 0s
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: network
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: truenas
  namespace: network
  labels:
    kubernetes.io/service-name: truenas
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.0.165
    conditions:
      ready: true
ports:
  - name: https
    port: 443
    protocol: TCP
